--- a/hugo.toml
+++ b/hugo.toml
@@ -24,10 +24,9 @@ theme = "LoveIt"
   dateFormat = "2006-01-02"
   # website title for Open Graph and Twitter Cards
   # 网站标题, 用于 Open Graph 和 Twitter Cards
-  title = "Helloooo"
   # website description for RSS, SEO, Open Graph and Twitter Cards
   # 网站描述, 用于 RSS, SEO, Open Graph 和 Twitter Cards
-  description = "Helloo"
+  description = "Tonterías de un desarrollador Android"
   # website images for Open Graph and Twitter Cards
   # 网站图片, 用于 Open Graph 和 Twitter Cards
   images = []
@@ -56,7 +55,7 @@ theme = "LoveIt"
       logo = ""
       # title name
       # 标题名称
-      name = "My cool site"
+      name = "Adrián Lázaro"
       # you can add extra information before the name (HTML format is supported), such as icons
       # 你可以在名称 (允许 HTML 格式) 之前添加其他信息, 例如图标
       pre = ""
@@ -76,16 +75,16 @@ theme = "LoveIt"
     custom = ""
     # whether to show Hugo and theme info
     # 是否显示 Hugo 和主题信息
-    hugo = true
+    hugo = false
     # whether to show copyright info
     # 是否显示版权信息
-    copyright = true
+    copyright = false
     # whether to show the author
     # 是否显示作者
-    author = true
+    author = false
     # site creation time
     # 网站创立年份
-    since = 2022
+    since = 2026
     # ICP info only in China (HTML format is supported)
     # ICP 备案信息，仅在中国使用 (支持 HTML 格式)
     icp = ""
@@ -212,8 +211,8 @@ theme = "LoveIt"
   # Social config in home page
   # 主页的社交信息设置
   [params.social]
-    GitHub = ""
-    Linkedin = ""
+    GitHub = "https://github.com/adrianlazaro8"
+    Linkedin = "www.linkedin.com/in/adlagar"
     X = ""
     Instagram = ""
     Facebook = ""
