--- a/hugo.toml
+++ b/hugo.toml
@@ -1,4 +1,4 @@
-baseURL = 'https://adrianlazaro8.github.io/'
+baseURL = 'https://adrianlazaro.dev/'
 languageCode = 'en-us'
 title = 'Adrian Lazaro'
 theme = "LoveIt"
@@ -26,7 +26,7 @@ theme = "LoveIt"
   # 网站标题, 用于 Open Graph 和 Twitter Cards
   # website description for RSS, SEO, Open Graph and Twitter Cards
   # 网站描述, 用于 RSS, SEO, Open Graph 和 Twitter Cards
-  description = "Tonterías de un desarrollador Android"
+  description = "Artículos de un desarrollador Android"
   # website images for Open Graph and Twitter Cards
   # 网站图片, 用于 Open Graph 和 Twitter Cards
   images = []
@@ -191,7 +191,7 @@ theme = "LoveIt"
       title = ""
       # subtitle shown in home page (HTML format is supported)
       # 主页显示的网站副标题 (允许 HTML 格式)
-      subtitle = "Estamos preparando cositas..."
+      subtitle = "Artículos y tonterías de un desarrollador Android"
       # whether to use typeit animation for subtitle
       # 是否为副标题显示打字机动画
       typeit = true
