--- a/hugo.toml
+++ b/hugo.toml
@@ -8,6 +8,18 @@ defaultContentLanguage = "es"
   [module.hugoVersion]
     min = "0.128.0"
 
+[[menu.main]]
+  identifier = "home"
+  name = "Inicio"
+  url = "/"
+  weight = 10
+
+[[menu.main]]
+  identifier = "posts"
+  name = "Artículos"
+  url = "/posts/"
+  weight = 20
+
 [params]
   # site default theme ["auto", "light", "dark"]
   # 网站默认主题 ["auto", "light", "dark"]
